--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,64 @@
-a:hover,
-a:focus,
-button:hover,
-button:focus {
-  color: yellow;
-}
-address a:hover {
-  color: black;
-}
-
-address a {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-
 body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
+  background-color: #ffffff;
 }
 
 button {
   cursor: pointer;
 }
 
-h1 {
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.logo-blue {
+  font-family: 'Raleway', sans-serif;
+  color: #4d5ae5;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.16667;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.logo-black {
+  color: #2e2f42;
+}
+
+.navigation {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.navigation:hover,
+.navigation:focus {
+  color: #404bbf;
+}
+
+.address-section {
+  color: #434455;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  font-style: normal;
+}
+
+.mail-and-phone:hover,
+.mail-and-phone:focus {
+  color: #404bbf;
+}
+
+.heading-head {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07143;
@@ -33,6 +66,7 @@ h1 {
   text-align: center;
   color: #fff;
 }
+
 .heading {
   background-color: #2e2f42;
   width: 1400px;
@@ -46,46 +80,12 @@ h1 {
   letter-spacing: 0.04em;
   color: #fff;
   background-color: #4d5ae5;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  padding: 16px 32px;
-  width: 169px;
-  height: 56px;
   font-family: inherit;
 }
 
-ul {
-  list-style-type: none;
-}
-
-nav a,
-footer a {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.6667;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-
-nav ul a {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-}
-
-.logo1 {
-  color: #4d5ae5;
-}
-
-.logo2 {
-  color: #2e2f42;
-}
-
-a {
-  text-decoration: none;
+.order-button:hover,
+.order-button:focus {
+  background-color: #404bbf;
 }
 
 .hid {
@@ -94,7 +94,27 @@ a {
   overflow: hidden;
 }
 
-h2 {
+.advantages-head {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.advantages-paragraph {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.our-team {
+  background-color: #f4f4fd;
+}
+
+.our-team-head {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11111;
@@ -104,7 +124,39 @@ h2 {
   color: #2e2f42;
 }
 
-h3 {
+.our-team-list-point {
+  background-color: #ffffff;
+}
+
+.our-team-list-point-head {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+
+.our-team-list-point-paragraph {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #434455;
+}
+
+.our-portfolio-head {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11111;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-align: center;
+  color: #2e2f42;
+}
+
+.our-portfolio-list-point-head {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -112,14 +164,26 @@ h3 {
   color: #2e2f42;
 }
 
-.our-team {
-  text-align: center;
-}
-
-p {
+.our-portfolio-list-point-paragraph {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+}
+
+footer {
+  background-color: #2e2f42;
+}
+
+.logo-white {
+  color: #f4f4fd;
+}
+
+.footer-paragraph {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
 }
